# Page-Swap-Algorithms

./: CMakeLists.txt  README.md
_build/: hey.txt  page_generator  runner
include/: ALRU.hpp  LRU.hpp  page_swap.h  page_swap.hpp
src/: ALRU.cpp  LRU.cpp  page_generator.cpp  page_swap.c  page_swap.cpp
test/: runner.cpp
